--- a/index.html
+++ b/index.html
@@ -21,8 +21,6 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
         crossorigin="anonymous">
 
-
-
     <!--MyCSS-->
     <link rel="stylesheet" href="css/main.css">
 
@@ -235,21 +233,8 @@
 
     </section>
 
-    <script>
-        var workinprogress = () => {
-            alert("Sorry. Work in Progress.");
-        }
-
-        $('.box i').hover(function () { $(this).addClass('animated bounce slow delay-1s') });
-
-        $('.box i').mouseleave(function () { $(this).removeClass('animated bounce slow delay-1s') })
-
-        $('.lastonela i').hover(function () { $(this).addClass('animated bounce slow delay-1s') });
-
-        $('.lastonela i').mouseleave(function () { $(this).removeClass('animated bounce slow delay-1s') })
-
-    </script>
-
 </body>
+
+<script src="/Javascript/main.js"></script>
 
 </html>
