--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
                 <li>
                     <a class="nav-item page-scroll" href="#CV">Download</a>
                 </li>
+                <li>
+                    <a class="nav-item page-scroll" href="Old About Me/Old About Me.html">Old Ver</a>
+                </li>
             </ul>
         </div>
 
@@ -214,19 +217,19 @@
             <hr>
             <p>Thank you for stopping by my website. Please feel free to download my resume in the below icons.
             </p>
-        
 
-        <div class=" row">
-            <div class="col-lg-6 col-sm-12">
 
-                <i onclick="workinprogress()" class="fa-7x fas fa-file-pdf"><a>PDF</a></i>
+            <div class=" row">
+                <div class="col-lg-6 col-sm-12">
+
+                    <i onclick="workinprogress()" class="fa-7x fas fa-file-pdf"><a>PDF</a></i>
+                </div>
+
+                <div class="col-lg-6 col-sm-12">
+                    <i onclick="workinprogress()" class="fa-7x far fa-file-word"><a>WORD</a></i>
+                </div>
             </div>
-
-            <div class="col-lg-6 col-sm-12">
-                <i onclick="workinprogress()" class="fa-7x far fa-file-word"><a>WORD</a></i>
-            </div>
-                    </div>
-    </div>
+        </div>
 
 
     </section>
@@ -234,7 +237,7 @@
 </body>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-crossorigin="anonymous"></script>
+    crossorigin="anonymous"></script>
 <script src='javascript/main.js'></script>
 
 </html>
