--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <a class="nav-item page-scroll" href="#CV">Download</a>
                 </li>
                 <li>
-                    <a class="nav-item page-scroll" href="Old About Me/Old About Me.html">Old Ver</a>
+                    <a class="nav-item page-scroll" target="_blank" href="Old About Me/Old About Me.html">Old Ver</a>
                 </li>
             </ul>
         </div>
