--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <li class="col-lg-6 col-md-6"><b>Phone:</b> 9329-0902 </li>
             </ul>
         </div>
-        <img id="profilepic" src="https://scontent.fhkg1-1.fna.fbcdn.net/v/t1.0-9/42090068_10156114562007968_7649676232686043136_n.jpg?_nc_cat=110&oh=644fd861bec3fa6c9d94a6ed97b320b6&oe=5C1610CE">
+        <img id="profilepic" src="./Picture/purin.jpg">
     </section>
 
     <!--Skillset-->
