--- a/Old About Me/Old About Me.html
+++ b/Old About Me/Old About Me.html
@@ -65,23 +65,17 @@
 		<div id="album" class="section">
 			<h1><span>My Album</span></h1>
 			<p>Pompompurin is my favourite cartoon charater. <b><i>Click</i></b> any  image below to view it full-size.</p>
-			  <a target="_blank" href="images/Album1.jpg">
-			  	<img src="images/Album1.jpg" alt="Album Photo 1">
+			  <a target="_blank" href="Images/Album1.jpg">
+			  	<img src="Images/Album1.jpg" alt="Album Photo 1">
   			  </a>
-  			   <a target="_blank" href="images/Album2.jpg">
-    			<img src="images/Album2.jpg" alt="Album Photo 2">
+  			   <a target="_blank" href="Images/Album2.jpg">
+    			<img src="Images/Album2.jpg" alt="Album Photo 2">
   			  </a>
-  			  <a target="_blank" href="images/Album3.jpg">
-    			<img src="images/Album3.jpg" alt="Album Photo 3">
+  			  <a target="_blank" href="Images/Album3.jpg">
+    			<img src="Images/Album3.jpg" alt="Album Photo 3">
   			  </a>
-  			  <a target="_blank" href="images/Album4.jpg">
-    			<img src="images/Album4.jpg" alt="Album Photo 4">
-  			  </a>
-  			   <a target="_blank" href="images/Album5.jpg">
-    			<img src="images/Album5.jpg" alt="Album Photo 5">
-  			  </a>
-  			  <a target="_blank" href="images/Album6.jpg">
-    			<img src="images/Album6.jpg" alt="Album Photo 6">
+  			  <a target="_blank" href="Images/Album4.jpg">
+    			<img src="Images/Album4.jpg" alt="Album Photo 4">
   			  </a>
 		</div>
 		<!-- My Album -->				
